fixed statistical table and added diagram

--- a/figuretable/regression_matching.tex
+++ b/figuretable/regression_matching.tex
@@ -10,46 +10,46 @@
  log(liner$_{b}$ *liner$_{t}$+1) & $-$0.002 &  & $-$0.013 & $-$0.029$^{***}$ & $-$0.003$^{***}$ \\ 
   & (0.006) &  & (0.009) & (0.010) & (0.001) \\ 
   & & & & & \\ 
- log(tramper$_{b}$ *tramper$_{t}$+1) & 0.005$^{*}$ &  & 0.004 & 0.018$^{***}$ & 0.002$^{***}$ \\ 
+ log(tramper$_{b}$ *tramper$_{t}$+1) & 0.004$^{*}$ &  & 0.005 & 0.020$^{***}$ & 0.002$^{***}$ \\ 
   & (0.002) &  & (0.005) & (0.006) & (0.001) \\ 
   & & & & & \\ 
- log(special$_{b}$ *special$_{t}$+1) & $-$0.009$^{**}$ &  & $-$0.002 & $-$0.017$^{***}$ & $-$0.002$^{***}$ \\ 
+ log(special$_{b}$ *special$_{t}$+1) & $-$0.009$^{**}$ &  & $-$0.002 & $-$0.016$^{***}$ & $-$0.002$^{***}$ \\ 
   & (0.004) &  & (0.006) & (0.006) & (0.001) \\ 
   & & & & & \\ 
  log(tanker$_{b}$ *tanker$_{t}$+1) & $-$0.003 &  & $-$0.017$^{**}$ & $-$0.026$^{***}$ & $-$0.003$^{***}$ \\ 
   & (0.004) &  & (0.007) & (0.007) & (0.001) \\ 
   & & & & & \\ 
- log(total$_{b}$ *total$_{t}$+1) & $-$0.021 &  & $-$0.010 & 0.049$^{***}$ & 0.006$^{***}$ \\ 
+ log(total$_{b}$ *total$_{t}$+1) & $-$0.018 &  & $-$0.005 & 0.056$^{***}$ & 0.007$^{***}$ \\ 
   & (0.013) &  & (0.017) & (0.018) & (0.002) \\ 
   & & & & & \\ 
- bank coverage similarity ratio &  & 1.598$^{***}$ & 2.052$^{***}$ & 0.649 & 0.088 \\ 
-  &  & (0.525) & (0.575) & (0.617) & (0.076) \\ 
+ bank coverage similarity ratio &  & 1.617$^{***}$ & 1.995$^{***}$ & 0.578 & 0.081 \\ 
+  &  & (0.525) & (0.574) & (0.616) & (0.076) \\ 
   & & & & & \\ 
- log(HHI$_{b}$ *HHI$_{t}$+1) &  & 0.525$^{***}$ & 0.372$^{*}$ & $-$0.123 & $-$0.019 \\ 
-  &  & (0.148) & (0.221) & (0.231) & (0.028) \\ 
+ log(HHI$_{b}$ *HHI$_{t}$+1) &  & 0.552$^{***}$ & 0.464$^{**}$ & 0.008 & $-$0.005 \\ 
+  &  & (0.149) & (0.226) & (0.238) & (0.028) \\ 
   & & & & & \\ 
- log(share of liner$_{b}$ *share of liner$_{t}$+1) &  & 0.334 & 1.159 & 2.140$^{***}$ & 0.253$^{***}$ \\ 
-  &  & (0.473) & (0.739) & (0.788) & (0.096) \\ 
+ log(share of liner$_{b}$ *share of liner$_{t}$+1) &  & 0.341 & 1.175 & 2.171$^{***}$ & 0.256$^{***}$ \\ 
+  &  & (0.472) & (0.739) & (0.788) & (0.096) \\ 
   & & & & & \\ 
- log(share of special$_{b}$ *share of special$_{t}$+1) &  & $-$0.996$^{*}$ & $-$0.990 & $-$0.529 & $-$0.041 \\ 
-  &  & (0.519) & (0.667) & (0.694) & (0.072) \\ 
+ log(share of special$_{b}$ *share of special$_{t}$+1) &  & $-$0.984$^{*}$ & $-$0.975 & $-$0.464 & $-$0.035 \\ 
+  &  & (0.524) & (0.672) & (0.699) & (0.073) \\ 
   & & & & & \\ 
- log(share of tramper$_{b}$ *share of tramper$_{t}$+1) &  & 0.308$^{***}$ & 0.165 & $-$0.558$^{***}$ & $-$0.058$^{**}$ \\ 
-  &  & (0.091) & (0.188) & (0.200) & (0.024) \\ 
+ log(share of tramper$_{b}$ *share of tramper$_{t}$+1) &  & 0.299$^{***}$ & 0.134 & $-$0.615$^{***}$ & $-$0.064$^{***}$ \\ 
+  &  & (0.091) & (0.191) & (0.203) & (0.024) \\ 
   & & & & & \\ 
- log(share of tanker$_{b}$ *share of tanker$_{t}$+1) &  & 0.257 & 0.992$^{***}$ & 1.311$^{***}$ & 0.158$^{***}$ \\ 
-  &  & (0.210) & (0.335) & (0.354) & (0.043) \\ 
+ log(share of tanker$_{b}$ *share of tanker$_{t}$+1) &  & 0.251 & 0.973$^{***}$ & 1.287$^{***}$ & 0.155$^{***}$ \\ 
+  &  & (0.210) & (0.335) & (0.353) & (0.043) \\ 
   & & & & & \\ 
- same type &  &  &  & 1.600$^{***}$ & 0.229$^{***}$ \\ 
+ same type &  &  &  & 1.603$^{***}$ & 0.230$^{***}$ \\ 
   &  &  &  & (0.052) & (0.007) \\ 
   & & & & & \\ 
- Intercept & $-$1.271$^{***}$ & $-$2.041$^{***}$ & $-$1.748$^{***}$ & $-$3.312$^{***}$ & $-$0.033 \\ 
-  & (0.260) & (0.083) & (0.395) & (0.425) & (0.051) \\ 
+ Intercept & $-$1.325$^{***}$ & $-$2.052$^{***}$ & $-$1.906$^{***}$ & $-$3.523$^{***}$ & $-$0.056 \\ 
+  & (0.261) & (0.083) & (0.398) & (0.429) & (0.051) \\ 
   & & & & & \\ 
 \hline \\[-1.8ex] 
 Model & Logit & Logit & Logit & Logit & OLS \\ 
 Observations & 13,806 & 13,806 & 13,806 & 13,806 & 13,806 \\ 
-Akaike Inf. Crit. & 12,056.510 & 12,037.120 & 12,034.740 & 11,053.080 & 10,230.180 \\ 
+Akaike Inf. Crit. & 12,057.230 & 12,036.470 & 12,034.360 & 11,050.310 & 10,227.660 \\ 
 \hline 
 \hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{5}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
