--- a/figuretable/shipping_market_stats_table.tex
+++ b/figuretable/shipping_market_stats_table.tex
@@ -1,20 +1,20 @@
-%latex.default(file = table_name, title = "", booktabs = TRUE,     object = temp, col.just = rep("r", dim(temp)[2]), center = "none",     table.env = FALSE, cgroupTexCmd = "itshape", colnamesTexCmd = "itshape",     collabel.just = rep("r", dim(temp)[2]), rgroupTexCmd = "itshape",     n.rgroup = c(5, 5), rgroup = c("measure of economies of scale",         "measure of economies of scope"))%
+%latex.default(file = table_name, title = "", booktabs = TRUE,     object = temp, col.just = rep("r", dim(temp)[2]), center = "none",     table.env = FALSE, cgroupTexCmd = "itshape", colnamesTexCmd = "itshape",     collabel.just = rep("r", dim(temp)[2]), rgroupTexCmd = "itshape",     n.rgroup = c(5, 5), rgroup = c("measure of economies of scale (million D/W)",         "measure of economies of scope"))%
 \begin{tabular}{lrrrrrrrr}
 \toprule
 \multicolumn{1}{l}{\itshape }&\multicolumn{1}{r}{\itshape N}&\multicolumn{1}{r}{\itshape mean}&\multicolumn{1}{r}{\itshape sd}&\multicolumn{1}{r}{\itshape min}&\multicolumn{1}{r}{\itshape q25}&\multicolumn{1}{r}{\itshape q50}&\multicolumn{1}{r}{\itshape q75}&\multicolumn{1}{r}{\itshape max}\tabularnewline
 \midrule
-{\itshape measure of economies of scale}&&&&&&&&\tabularnewline
-~~total tonnage size&$118$&109889.195&207066.440&479.000&11189.250&26461.000&90563.000&1022743\tabularnewline
-~~total tonnage size of liner&$118$&30656.051&112049.108&0.000&0.000&0.000&0.000&721218\tabularnewline
-~~total tonnage size of special&$118$&15080.932&33126.398&0.000&0.000&0.000&7586.000&176566\tabularnewline
-~~total tonnage size of tanker&$118$&29611.525&70524.066&0.000&0.000&0.000&24067.750&417241\tabularnewline
-~~total tonnage size of tramper&$118$&34540.686&55403.907&0.000&2283.250&12855.500&33663.750&245501\tabularnewline
+{\itshape measure of economies of scale (million D/W)}&&&&&&&&\tabularnewline
+~~total tonnage size&$118$&0.109&0.207&0.000&0.011&0.026&0.089&1.023\tabularnewline
+~~total tonnage size of liner&$118$&0.031&0.112&0.000&0.000&0.000&0.000&0.721\tabularnewline
+~~total tonnage size of special&$118$&0.014&0.030&0.000&0.000&0.000&0.008&0.161\tabularnewline
+~~total tonnage size of tanker&$118$&0.030&0.071&0.000&0.000&0.000&0.024&0.417\tabularnewline
+~~total tonnage size of tramper&$118$&0.035&0.055&0.000&0.002&0.013&0.034&0.246\tabularnewline
 \midrule
 {\itshape measure of economies of scope}&&&&&&&&\tabularnewline
-~~share of liner&$118$&0.104&0.235&0.000&0.000&0.000&0.000&1\tabularnewline
-~~share of special&$118$&0.117&0.244&0.000&0.000&0.000&0.088&1\tabularnewline
-~~share of tanker&$118$&0.192&0.351&0.000&0.000&0.000&0.208&1\tabularnewline
-~~share of tramper&$118$&0.587&0.417&0.000&0.135&0.705&1.000&1\tabularnewline
-~~HHI based on carrier types&$118$&0.815&0.241&0.258&0.584&1.000&1.000&1\tabularnewline
+~~share of liner&$118$&0.104&0.235&0.000&0.000&0.000&0.000&1.000\tabularnewline
+~~share of special&$118$&0.116&0.242&0.000&0.000&0.000&0.088&1.000\tabularnewline
+~~share of tanker&$118$&0.192&0.351&0.000&0.000&0.000&0.208&1.000\tabularnewline
+~~share of tramper&$118$&0.588&0.417&0.000&0.139&0.705&1.000&1.000\tabularnewline
+~~HHI based on carrier types&$118$&0.814&0.241&0.258&0.584&1.000&1.000&1.000\tabularnewline
 \bottomrule
 \end{tabular}
