--- a/main/02_regression.Rmd
+++ b/main/02_regression.Rmd
@@ -58,13 +58,14 @@ library(stargazer)
 data_totaltons <- readr::read_csv("../input/data_totaltons.csv")
 d <- data_totaltons %>%
   dplyr::select(-year_j,-Number, -shipping_quantity_world,
-                -shipping_quantity_japan, -grosstons_liberia ) %>%
+                -shipping_quantity_japan) %>%
   dplyr::rename(Japan = grosstons_japan,
                 UK = grosstons_UK,
                 US = grosstons_US,
                 Norway = gtosstons_norway,
                 Soviet = grosstons_soviet,
-                Greek = grosstons_greek) %>% 
+                Greek = grosstons_greek,
+                Liberia = grosstons_liberia) %>% 
   tidyr::gather(key = "variable", value = "value", -year) 
 # d2 <- d %>% 
 #   group_by(year) %>%
@@ -588,14 +589,19 @@ data2 <- data2 %>%
   dplyr::filter(total > 0)
 # construct summary statistics table
 temp <- data2 %>%
-  dplyr::select(total, liner, special, tramper, tanker, 
+  dplyr::mutate(tonnage_size = total/1000000,
+                tonnage_size_liner = liner/1000000,
+                tonnage_size_special = special/1000000,
+                tonnage_size_tramper = tramper/1000000,
+                tonnage_size_tanker = tanker/1000000) %>% 
+  dplyr::select(tonnage_size, 
+                tonnage_size_liner,
+                tonnage_size_special,
+                tonnage_size_tramper,
+                tonnage_size_tanker, 
                 share_liner, share_special, share_tramper, share_tanker,
                 HHI) %>% 
-  dplyr::rename(type_HHI = HHI,
-                tonnage_size_liner = liner,
-                tonnage_size_special = special,
-                tonnage_size_tramper = tramper,
-                tonnage_size_tanker = tanker) %>% 
+  dplyr::rename(type_HHI = HHI) %>% 
   tidyr::gather("variable", "value") %>%
   dplyr::group_by(variable) %>%
   dplyr::summarise(
@@ -618,8 +624,8 @@ temp <- data2 %>%
   dplyr::select(-variable) %>% 
   as.data.frame()
 temp <- rbind(
-  temp[9,],
-  temp[5:8,],
+  temp[5,],
+  temp[6:9,],
   temp[1:4,],
   temp[10,])
 rownames(temp) <-
@@ -649,7 +655,7 @@ x <- Hmisc::latex(
   collabel.just = rep("r", dim(temp)[2]),
   rgroupTexCmd = "itshape",
   n.rgroup = c(5,5),
-  rgroup = c("measure of economies of scale", 
+  rgroup = c("measure of economies of scale (million D/W)", 
              "measure of economies of scope")
 )
 
@@ -860,7 +866,7 @@ x <- Hmisc::latex(
 \label{tb:total_tonnage_size_group_table}
 \end{table}
 
-
+# Export dataset for maximum rank estimator
 
 ```{r, echo=FALSE, results = 'hide', out.width="50%"}
 denom = 1e6
@@ -874,3 +880,315 @@ data3_for_maximum_rank_estimation <- data3 %>%
 write.csv(x=data3_for_maximum_rank_estimation,
           file="../output/data_for_maximum_rank_estimation.csv")
 ```
+
+
+
+
+# Sankey diagram based on estimated parameters
+
+
+```{r, echo=FALSE, results = 'hide', out.width="50%"}
+# Library
+library(networkD3)
+library(dplyr)
+ 
+# A connection data frame is a list of flows with intensity for each flow
+links <- data.frame(
+  source=c("group_A","group_A", "group_B", "group_C", "group_C", "group_E"), 
+  target=c("group_C","group_D", "group_E", "group_F", "group_G", "group_H"), 
+  value=c(2, 1, 2, 3, 1, 3)
+  )
+ 
+# From these flows we need to create a node data frame: it lists every entities involved in the flow
+nodes <- data.frame(
+  name=c(as.character(links$source), 
+  as.character(links$target)) %>% unique()
+)
+ 
+# With networkD3, connection must be provided using id, not using real name like in the links dataframe.. So we need to reformat it.
+links$IDsource <- match(links$source, nodes$name)-1 
+links$IDtarget <- match(links$target, nodes$name)-1
+ 
+# Make the Network
+p <- networkD3::sankeyNetwork(Links = links,
+                              Nodes = nodes,
+                              Source = "IDsource",
+                              Target = "IDtarget",
+                              Value = "value",
+                              NodeID = "name", 
+                              sinksRight=FALSE)
+# save the widget
+# library(htmlwidgets)
+# saveWidget(p, file=paste0( getwd(), "/HtmlWidget/sankeyBasic1.html"))
+```
+
+```{r, echo=FALSE, results = 'hide', out.width="50%"}
+p
+```
+
+
+```{r, echo=FALSE, results = 'hide', out.width="50%"}
+# A connection data frame is a list of flows with intensity for each flow
+links <- data.frame(
+  source=c("Nippon Yusen (id 1)","Mitsubishi Kaiun (id 2)",
+           "Osaka Syosen (id 3-9)", "Mitsui Senpaku (id 4-10)",
+           "Nitto Syosen (id 5-13)", "Daido Kaiun (id 6-14)",
+           "Kawasaki Kisen (id 7-15)", "Iino Kaiun (id 8-16)",
+           "Yamashita Kisen (id 9-17)", "Shin-nihon Kisen (id 10-18)",
+           "Nihon Yusosen (id 11-23)", "Nissan Kisen (id 12-24)"), 
+  target=c("Nippon Yusen ","Nippon Yusen ", 
+           "Mitsui O.S.K. Line", "Mitsui O.S.K. Line",
+           "Japan Lines", "Japan Lines",
+           "Kawasaki Kisen Kaisha", "Kawasaki Kisen Kaisha",
+           "Yamashita-Shinnihon Kisen", "Yamashita-Shinnihon Kisen",
+           "Showa Line", "Showa Line"), 
+  value=c(1, 1, 1, 1, 1, 1)
+  )
+ 
+# From these flows we need to create a node data frame: it lists every entities involved in the flow
+nodes <- data.frame(
+  name=c(as.character(links$source), 
+  as.character(links$target)) %>% unique()
+)
+ 
+# With networkD3, connection must be provided using id, not using real name like in the links dataframe.. So we need to reformat it.
+links$IDsource <- match(links$source, nodes$name)-1 
+links$IDtarget <- match(links$target, nodes$name)-1
+
+
+my_color <- 'd3.scaleOrdinal() .domain(["Nippon Yusen (id 1)","Mitsubishi Kaiun (id 2)",
+           "Osaka Syosen (id 3-9)", "Mitsui Senpaku (id 4-10)",
+           "Nitto Syosen (id 5-13)", "Daido Kaiun (id 6-14)",
+           "Kawasaki Kisen (id 7-15)", "Iino Kaiun (id 8-16)",
+           "Yamashita Kisen (id 9-17)", "Shin-nihon Kisen (id 10-18)",
+           "Nihon Yusosen (id 11-23)", "Nissan Kisen (id 12-24)"]) .range(["grey", "grey" , "grey", "grey", "grey" , "grey", "grey", "grey" , "grey", "grey", "grey" , "grey"])'
+
+
+# Make the Network
+p <- networkD3::sankeyNetwork(Links = links,
+                              Nodes = nodes,
+                              Source = "IDsource",
+                              Target = "IDtarget",
+                              Value = "value",
+                              NodeID = "name",
+                              colourScale=my_color,
+                              sinksRight=FALSE)
+p
+# save the widget
+# library(htmlwidgets)
+# saveWidget(p, file=paste0( getwd(), "/HtmlWidget/sankeyBasic1.html"))
+```
+
+```{r, echo=FALSE, results = 'hide', out.width="50%"}
+# A connection data frame is a list of flows with intensity for each flow
+links <- data.frame(
+  source=c("Nippon Yusen (id 1)","Mitsubishi Kaiun (id 2)",
+           "Osaka Syosen (id 3-9)", "Mitsui Senpaku (id 4-10)",
+           "Nitto Syosen (id 5-13)", "Daido Kaiun (id 6-14)",
+           "Kawasaki Kisen (id 7-15)", "Iino Kaiun (id 8-16)",
+           "Yamashita Kisen (id 9-17)", "Shin-nihon Kisen (id 10-18)",
+           "Nihon Yusosen (id 11-23)", "Nissan Kisen (id 12-24)",
+           # 1st layer
+           "A (subsidy=100)", "C (subsidy=100)", 
+           "A (subsidy=100)", "A (subsidy=100)",
+           "B (subsidy=100)", "C (subsidy=100)",
+           "A (subsidy=100)", "D (subsidy=100)",
+           "unmatched (subsidy=100)", "A (subsidy=100)",
+           "D (subsidy=100)", "B (subsidy=100)",
+           # 2nd layer
+           "A (subsidy=1000)", "C (subsidy=1000)", 
+           "A (subsidy=1000)", "A (subsidy=1000)",
+           "B (subsidy=1000)", "C (subsidy=1000)",
+           "A (subsidy=1000)", "D (subsidy=1000)",
+           "unmatched (subsidy=1000)", "A (subsidy=1000)",
+           "D (subsidy=1000)", "B (subsidy=1000)",
+           # 3rd layer
+           "E (subsidy=5000)","E (subsidy=5000)",
+           "E (subsidy=5000)","E (subsidy=5000)",
+           "F (subsidy=5000)","E (subsidy=5000)",
+           "E (subsidy=5000)", "E (subsidy=5000)",
+           "unmatched (subsidy=5000)", "E (subsidy=5000)",
+           "E (subsidy=5000)", "F (subsidy=5000)",
+           #4th layer
+           "E (subsidy=15000)","E (subsidy=15000)",
+           "E (subsidy=15000)","E (subsidy=15000)",
+           "E (subsidy=15000)","E (subsidy=15000)",
+           "E (subsidy=15000)", "E (subsidy=15000)",
+           "unmatched (subsidy=15000)", "E (subsidy=15000)",
+           "E (subsidy=15000)", "E (subsidy=15000)"), 
+  target=c("A (subsidy=100)", "C (subsidy=100)", 
+           "A (subsidy=100)", "A (subsidy=100)",
+           "B (subsidy=100)", "C (subsidy=100)",
+           "A (subsidy=100)", "D (subsidy=100)",
+           "unmatched (subsidy=100)", "A (subsidy=100)",
+           "D (subsidy=100)", "B (subsidy=100)",
+           # 1st layer
+           "A (subsidy=1000)", "C (subsidy=1000)", 
+           "A (subsidy=1000)", "A (subsidy=1000)",
+           "B (subsidy=1000)", "C (subsidy=1000)",
+           "A (subsidy=1000)", "D (subsidy=1000)",
+           "unmatched (subsidy=1000)", "A (subsidy=1000)",
+           "D (subsidy=1000)", "B (subsidy=1000)",
+           # 2nd layer
+           "E (subsidy=5000)","E (subsidy=5000)",
+           "E (subsidy=5000)","E (subsidy=5000)",
+           "F (subsidy=5000)","E (subsidy=5000)",
+           "E (subsidy=5000)", "E (subsidy=5000)",
+           "unmatched (subsidy=5000)", "E (subsidy=5000)",
+           "E (subsidy=5000)", "F (subsidy=5000)",
+           # 3rd layer
+           "E (subsidy=15000)","E (subsidy=15000)",
+           "E (subsidy=15000)","E (subsidy=15000)",
+           "E (subsidy=15000)","E (subsidy=15000)",
+           "E (subsidy=15000)", "E (subsidy=15000)",
+           "unmatched (subsidy=15000)", "E (subsidy=15000)",
+           "E (subsidy=15000)", "E (subsidy=15000)",
+           # 4th layer
+           "E (subsidy=30000)", "E (subsidy=30000)",
+           "E (subsidy=30000)", "E (subsidy=30000)",
+           "E (subsidy=30000)", "E (subsidy=30000)",
+           "E (subsidy=30000)", "E (subsidy=30000)",
+           "E (subsidy=30000)", "E (subsidy=30000)",
+           "E (subsidy=30000)", "E (subsidy=30000)"
+           ), 
+  value=c(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+          # 1st layer
+          1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+          # 2nd layer
+          1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+          # 3rd layer
+          1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+          # 4th layer
+          1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)
+  )
+
+# From these flows we need to create a node data frame: it lists every entities involved in the flow
+nodes <- data.frame(
+  name=c(as.character(links$source), 
+  as.character(links$target)) %>% unique()
+)
+ 
+# With networkD3, connection must be provided using id, not using real name like in the links dataframe.. So we need to reformat it.
+links$IDsource <- match(links$source, nodes$name)-1 
+links$IDtarget <- match(links$target, nodes$name)-1
+ 
+# Make the Network
+p <- networkD3::sankeyNetwork(Links = links,
+                              Nodes = nodes,
+                              Source = "IDsource",
+                              Target = "IDtarget",
+                              Value = "value",
+                              NodeID = "name", 
+                              colourScale=my_color,
+                              sinksRight=FALSE)
+p
+
+```
+
+```{r, echo=FALSE, results = 'hide', out.width="50%"}
+# A connection data frame is a list of flows with intensity for each flow
+links <- data.frame(
+  source=c("Nippon Yusen (id 1)","Mitsubishi Kaiun (id 2)",
+           "Osaka Syosen (id 3-9)", "Mitsui Senpaku (id 4-10)",
+           "Nitto Syosen (id 5-13)", "Daido Kaiun (id 6-14)",
+           "Kawasaki Kisen (id 7-15)", "Iino Kaiun (id 8-16)",
+           "Yamashita Kisen (id 9-17)", "Shin-nihon Kisen (id 10-18)",
+           "Nihon Yusosen (id 11-23)", "Nissan Kisen (id 12-24)",
+           # 1st layer
+           "A (threshold=1mil)", "C (threshold=1mil)", 
+           "A (threshold=1mil)", "A (threshold=1mil)",
+           "B (threshold=1mil)", "C (threshold=1mil)",
+           "A (threshold=1mil)", "D (threshold=1mil)",
+           "unmatched (threshold=1mil)", "A (threshold=1mil)",
+           "D (threshold=1mil)", "B (threshold=1mil)",
+           # 2nd layer
+           "A (threshold=2mil)", "C (threshold=2mil)", 
+           "A (threshold=2mil)", "E (threshold=2mil)",
+           "B (threshold=2mil)", "C (threshold=2mil)",
+           "E (threshold=2mil)", "D (threshold=2mil)",
+           "unmatched (threshold=2mil) ", "unmatched (threshold=2mil)",
+           "D (threshold=2mil)", "B (threshold=2mil)",
+           # 3rd layer
+           "A (threshold=3mil)","C (threshold=3mil)",
+           "A (threshold=3mil)","A (threshold=3mil)",
+           "B (threshold=3mil)","C (threshold=3mil)",
+           "A (threshold=3mil)", "D (threshold=3mil)",
+           "unmatched (threshold=3mil) ", "unmatched (threshold=3mil)",
+           "D (threshold=3mil)", "B (threshold=3mil)",
+           #4th layer
+           "A (threshold=4mil)","C (threshold=4mil)",
+           "A (threshold=4mil)","A (threshold=4mil)",
+           "B (threshold=4mil)","C (threshold=4mil)",
+           "A (threshold=4mil)", "D (threshold=4mil)",
+           "unmatched (threshold=4mil) ", "unmatched (threshold=4mil)",
+           "D (threshold=4mil)", "B (threshold=4mil)"), 
+  target=c("A (threshold=1mil)", "C (threshold=1mil)", 
+           "A (threshold=1mil)", "A (threshold=1mil)",
+           "B (threshold=1mil)", "C (threshold=1mil)",
+           "A (threshold=1mil)", "D (threshold=1mil)",
+           "unmatched (threshold=1mil)", "A (threshold=1mil)",
+           "D (threshold=1mil)", "B (threshold=1mil)",
+           # 1st layer
+           "A (threshold=2mil)", "C (threshold=2mil)", 
+           "A (threshold=2mil)", "E (threshold=2mil)",
+           "B (threshold=2mil)", "C (threshold=2mil)",
+           "E (threshold=2mil)", "D (threshold=2mil)",
+           "unmatched (threshold=2mil) ", "unmatched (threshold=2mil)",
+           "D (threshold=2mil)", "B (threshold=2mil)",
+           # 2nd layer
+           "A (threshold=3mil)","C (threshold=3mil)",
+           "A (threshold=3mil)","A (threshold=3mil)",
+           "B (threshold=3mil)","C (threshold=3mil)",
+           "A (threshold=3mil)", "D (threshold=3mil)",
+           "unmatched (threshold=3mil) ", "unmatched (threshold=3mil)",
+           "D (threshold=3mil)", "B (threshold=3mil)",
+           # 3rd layer
+           "A (threshold=4mil)","C (threshold=4mil)",
+           "A (threshold=4mil)","A (threshold=4mil)",
+           "B (threshold=4mil)","C (threshold=4mil)",
+           "A (threshold=4mil)", "D (threshold=4mil)",
+           "unmatched (threshold=4mil) ", "unmatched (threshold=4mil)",
+           "D (threshold=4mil)", "B (threshold=4mil)",
+           # 4th layer
+           "A (threshold=5mil)","C (threshold=5mil)",
+           "A (threshold=5mil)","A (threshold=5mil)",
+           "B (threshold=5mil)","C (threshold=5mil)",
+           "A (threshold=5mil)", "D (threshold=5mil)",
+           "unmatched (threshold=5mil) ", "unmatched (threshold=5mil)",
+           "D (threshold=5mil)", "B (threshold=5mil)"
+           ), 
+  value=c(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+          # 1st layer
+          1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+          # 2nd layer
+          1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+          # 3rd layer
+          1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+          # 4th layer
+          1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)
+  )
+
+# From these flows we need to create a node data frame: it lists every entities involved in the flow
+nodes <- data.frame(
+  name=c(as.character(links$source), 
+  as.character(links$target)) %>% unique()
+)
+ 
+# With networkD3, connection must be provided using id, not using real name like in the links dataframe.. So we need to reformat it.
+links$IDsource <- match(links$source, nodes$name)-1 
+links$IDtarget <- match(links$target, nodes$name)-1
+ 
+# Make the Network
+p <- networkD3::sankeyNetwork(Links = links,
+                              Nodes = nodes,
+                              Source = "IDsource",
+                              Target = "IDtarget",
+                              Value = "value",
+                              NodeID = "name", 
+                              colourScale=my_color,
+                              sinksRight=FALSE)
+p
+```
+
+
+
