--- a/julia_merger_table/ratio_score_results_two_variables_to_buyer_subsidy.tex
+++ b/julia_merger_table/ratio_score_results_two_variables_to_buyer_subsidy.tex
@@ -1,11 +1,23 @@
 \begin{tabular}{@{\extracolsep{5pt}}lcccccccc}
 \toprule 
- & $\beta_1/|\gamma|$ & $\beta_2/|\gamma|$ & $\beta_3/|\gamma|$ & $\beta_4/|\gamma|$ & $\beta_5/|\gamma|$ & $\beta_6/|\gamma|$ & $\beta_7/|\gamma|$ & $\beta_8/|\gamma|$ \\
+$m$ & $x_0$ & $\beta_m$ & $\bar{x}_m$ & $1SD(x_m)$ & $-\gamma$ & $V(\bar{x}_m)=x_0 x_0 + \beta_m \bar{x}_m \bar{x}_m-\gamma$ & $V(\bar{x}_m+1SD(x_m))$ & $V(\bar{x}_m+1SD(x_m))-V(\bar{x}_m)$ \\
 \midrule 
+1 & 0.11 & 93.61 & 0.031 & 0.112 & -1.24 & -1.138 & 0.686 & 1.824 \\
  &  &  &  &  &  &  &  &  \\
- & 75.492 & 36.926 & 110.873 & 36.926 & -67.17 & -339.869 & -229.439 & -270.674 \\
+2 & 0.11 & 34.71 & 0.015 & 0.033 & -0.94 & -0.92 & -0.848 & 0.072 \\
  &  &  &  &  &  &  &  &  \\
-relative level & 2.04 & 1.0 & 3.0 & 1.0 & -1.82 & -9.2 & -6.21 & -7.33 \\
+3 & 0.11 & 227.29 & 0.03 & 0.071 & -2.05 & -1.833 & 0.281 & 2.114 \\
+ &  &  &  &  &  &  &  &  \\
+4 & 0.11 & 34.71 & 0.035 & 0.055 & -0.94 & -0.885 & -0.647 & 0.238 \\
+ &  &  &  &  &  &  &  &  \\
+ &  &  &  &  &  &  &  &  \\
+5 & 0.11 & -90.68 & 0.104 & 0.235 & -1.35 & -2.319 & -11.759 & -9.44 \\
+ &  &  &  &  &  &  &  &  \\
+6 & 0.11 & -285.49 & 0.117 & 0.244 & -0.84 & -4.736 & -38.033 & -33.297 \\
+ &  &  &  &  &  &  &  &  \\
+7 & 0.11 & -261.56 & 0.192 & 0.351 & -1.14 & -10.77 & -78.249 & -67.479 \\
+ &  &  &  &  &  &  &  &  \\
+8 & 0.11 & -240.9 & 0.587 & 0.417 & -0.89 & -83.885 & -243.709 & -159.824 \\
  &  &  &  &  &  &  &  &  \\
 \bottomrule 
 \end{tabular}
