--- a/julia_merger_table/score_results_HHI_only_to_buyer_subsidy.tex
+++ b/julia_merger_table/score_results_HHI_only_to_buyer_subsidy.tex
@@ -14,7 +14,7 @@ merger cost & -$\gamma$ & -2.3 \\
 subsidy sensitivity & $\delta$ & 20 \\
  &  &  &  &  &  &  &  &  &  \\
 \hline 
-$\sharp$ Inequalities (Point) &  & 17868 \\
+$\sharp$ Inequalities &  & 17864 \\
 \% Inequalities &  & 0.8971 \\
 \bottomrule 
 \end{tabular}
