--- a/julia_merger_table/score_results_multivariate_to_buyer_subsidy.tex
+++ b/julia_merger_table/score_results_multivariate_to_buyer_subsidy.tex
@@ -1,39 +1,40 @@
-\begin{tabular}{@{\extracolsep{5pt}}lccccc}
+\begin{tabular}{@{\extracolsep{5pt}}lcccccc}
 \toprule 
- &  &  & Value Function &  &  \\
- &  & Point Estimate & Point Estimate & Point Estimate & Point Estimate \\
- &  & [95\% CI] & [95\% CI] & [95\% CI] & [95\% CI] \\
+ &  &  & Value Function &  &  &  \\
+ &  & (1) & (2) & (3) &  &  \\
+ &  & Point Estimate & Point Estimate & Point Estimate & Use Column 3 &  \\
+ &  & [95\% CI] & [95\% CI] & [95\% CI] & $\bar{x}$  & $\beta(\bar{x}\times\bar{x})/\gamma$ \\
 \midrule 
-Scale variables &  &  &  &  &  \\
- &  &  &  &  \\
-total$_{b}$ $\times$ total$_{t}$ & $\beta_0$ & +1 & +1 & +1 & +1 \\
- &  & (S) & (S) & (S) & (S) \\
-liner$_{b}$ $\times$ liner$_{t}$ & $\beta_1$ & 297.64 &  & 67.74 &  \\
- &  & [8.76, 296.16] &  & [-285.41, 256.78] &  \\
-tramper$_{b}$ $\times$ tramper$_{t}$ & $\beta_2$ & 86.47 &  & 266.17 &  \\
- &  & [-140.09, 288.7] &  & [-282.79, 295.86] &  \\
-special$_{b}$ $\times$ special$_{t}$ & $\beta_3$ & 289.17 &  & -121.43 &  \\
- &  & [23.37, 296.29] &  & [-278.51, 295.32] &  \\
-tanker$_{b}$ $\times$ tanker$_{t}$ & $\beta_4$ & 13.64 &  & 152.96 & -251.4 \\
- &  & [-180.16, 260.22] &  & [-258.33, 269.98] & [-280.88, 288.11] \\
-Share variables &  &  &  &  &  \\
+Scale variables &  &  &  &  &  &  \\
  &  &  &  &  &  \\
-liner$_{b}$ $\times$ liner$_{t}$ & $\beta_5$ &  & -23.8 & -67.06 & -7.21 \\
- &  &  & [-292.34, -12.62] & [-289.45, -23.64] & [-287.94, -4.62] \\
-tramper$_{b}$ $\times$ tramper$_{t}$ & $\beta_6$ &  & -79.47 & -36.06 & -49.65 \\
- &  &  & [-292.64, -3.44] & [-282.32, -3.97] & [-288.13, -2.86] \\
-special$_{b}$ $\times$ special$_{t}$ & $\beta_7$ &  & -28.07 & -194.54 & -134.76 \\
- &  &  & [-292.48, -11.48] & [-294.97, -9.23] & [-293.26, -4.67] \\
-tanker$_{b}$ $\times$ tanker$_{t}$ & $\beta_8$ &  & -57.63 & -76.95 & -151.43 \\
- &  &  & [-290.01, -3.59] & [-293.72, -9.35] & [-286.92, -16.95] \\
- &  &  &  &  &  \\
- &  &  &  &  &  \\
-merger cost & -$\gamma$ & -11.2 & -6.12 & -12.85 & -8.97 \\
- &  & [-19.33, 2.05] & [-18.94, -0.43] & [-18.76, 0.81] & [-19.26, -0.24] \\
-subsidy sensitivity & $\delta$ & 20 & 20 & 20 & 20 \\
- &  &  &  &  &  \\
+total$_{b}$ $\times$ total$_{t}$ & $\beta_0$ & +1 & +1 & +1 & 0.11 & 0.001 \\
+ &  & (S) & (S) & (S) &  &  \\
+liner$_{b}$ $\times$ liner$_{t}$ & $\beta_1$ & 297.64 &  & 67.74 & 0.031 & 0.005 \\
+ &  & [8.76, 296.16] &  & [-285.41, 256.78] &  &  \\
+tramper$_{b}$ $\times$ tramper$_{t}$ & $\beta_2$ & 86.47 &  & 266.17 & 0.015 & 0.005 \\
+ &  & [-140.09, 288.7] &  & [-282.79, 295.86] &  &  \\
+special$_{b}$ $\times$ special$_{t}$ & $\beta_3$ & 289.17 &  & -121.43 & 0.03 & -0.009 \\
+ &  & [23.37, 296.29] &  & [-278.51, 295.32] &  &  \\
+tanker$_{b}$ $\times$ tanker$_{t}$ & $\beta_4$ & 13.64 &  & 152.96 & 0.035 & 0.015 \\
+ &  & [-180.16, 260.22] &  & [-258.33, 269.98] &  &  \\
+Share variables &  &  &  &  &  &  \\
+ &  &  &  &  &  &  \\
+liner$_{b}$ $\times$ liner$_{t}$ & $\beta_5$ &  & -23.8 & -67.06 & 0.104 & -0.056 \\
+ &  &  & [-292.34, -12.62] & [-289.45, -23.64] &  &  \\
+tramper$_{b}$ $\times$ tramper$_{t}$ & $\beta_6$ &  & -79.47 & -36.06 & 0.117 & -0.038 \\
+ &  &  & [-292.64, -3.44] & [-282.32, -3.97] &  &  \\
+special$_{b}$ $\times$ special$_{t}$ & $\beta_7$ &  & -28.07 & -194.54 & 0.192 & -0.558 \\
+ &  &  & [-292.48, -11.48] & [-294.97, -9.23] &  &  \\
+tanker$_{b}$ $\times$ tanker$_{t}$ & $\beta_8$ &  & -57.63 & -76.95 & 0.587 & -2.063 \\
+ &  &  & [-290.01, -3.59] & [-293.72, -9.35] &  &  \\
+ &  &  &  &  &  &  \\
+ &  &  &  &  &  &  \\
+merger cost & -$\gamma$ & -11.2 & -6.12 & -12.85 &  &  \\
+ &  & [-19.33, 2.05] & [-18.94, -0.43] & [-18.76, 0.81] &  &  \\
+subsidy sensitivity & $\delta$ & 20 & 20 & 20 &  &  \\
+ &  &  &  &  &  &  \\
 \hline 
-$\sharp$ Inequalities in Point Estimate &  & 17865 & 17865 & 17865 & 17865 \\
-\% Inequalities &  & 0.815 & 0.902 & 0.904 & 0.903 \\
+$\sharp$ Inequalities &  & 17864 & 17864 & 17864 &  &  \\
+\% Inequalities &  & 0.815 & 0.902 & 0.904 &  &  \\
 \bottomrule 
 \end{tabular}
