--- a/figuretable/total_tonnage_size_group_table.tex
+++ b/figuretable/total_tonnage_size_group_table.tex
@@ -6,32 +6,32 @@
 {\itshape Nippon Yusen}&&&&\tabularnewline
 ~~1&(1) main&1509795&2&2577274\tabularnewline
 ~~2&(2) affiliate&841568&7&\tabularnewline
-~~3&(3) wholly-controlled&225911&7&\tabularnewline
+~~3&(3) wholly controlled&225911&7&\tabularnewline
 \midrule
 {\itshape Mitsui OSK Line}&&&&\tabularnewline
 ~~4&(1) main&1924859&2&2879216\tabularnewline
 ~~5&(2) affiliate&400530&5&\tabularnewline
-~~6&(3) wholly-controlled&553827&20&\tabularnewline
+~~6&(3) wholly controlled&553827&20&\tabularnewline
 \midrule
 {\itshape Japan Line}&&&&\tabularnewline
 ~~7&(1) main&1122694&2&1328069\tabularnewline
 ~~8&(2) affiliate&125738&1&\tabularnewline
-~~9&(3) wholly-controlled&79637&4&\tabularnewline
+~~9&(3) wholly controlled&79637&4&\tabularnewline
 \midrule
 {\itshape Kawasaki Kisen Kaisha}&&&&\tabularnewline
 ~~10&(1) main&1658650&2&2338502\tabularnewline
 ~~11&(2) affiliate&391170&9&\tabularnewline
-~~12&(3) wholly-controlled&288682&7&\tabularnewline
+~~12&(3) wholly controlled&288682&7&\tabularnewline
 \midrule
 {\itshape Yamashita Shinnihon Kisen}&&&&\tabularnewline
 ~~13&(1) main&899033&2&1671590\tabularnewline
 ~~14&(2) affiliate&601616&5&\tabularnewline
-~~15&(3) wholly-controlled&170941&10&\tabularnewline
+~~15&(3) wholly controlled&170941&10&\tabularnewline
 \midrule
 {\itshape Showa Line}&&&&\tabularnewline
 ~~16&(1) main&549095&2&1041063\tabularnewline
 ~~17&(2) affiliate&464830&3&\tabularnewline
-~~18&(3) wholly-controlled&27138&4&\tabularnewline
+~~18&(3) wholly controlled&27138&4&\tabularnewline
 \midrule
 {\itshape Unmatched}&&&&\tabularnewline
 ~~19&unmatched&1131211&24&1131211\tabularnewline
