--- a/figuretable/shipping_market_stats_table.tex
+++ b/figuretable/shipping_market_stats_table.tex
@@ -1,9 +1,9 @@
-%latex.default(file = table_name, title = "", booktabs = TRUE,     object = temp, col.just = rep("r", dim(temp)[2]), center = "none",     table.env = FALSE, cgroupTexCmd = "itshape", colnamesTexCmd = "itshape",     collabel.just = rep("r", dim(temp)[2]), rgroupTexCmd = "itshape",     n.rgroup = c(5, 5), rgroup = c("Size variables (million D/W)",         "Specialization variables (percentage share)"))%
+%latex.default(file = table_name, title = "", booktabs = TRUE,     object = temp, col.just = rep("r", dim(temp)[2]), center = "none",     table.env = FALSE, cgroupTexCmd = "itshape", colnamesTexCmd = "itshape",     collabel.just = rep("r", dim(temp)[2]), rgroupTexCmd = "itshape",     n.rgroup = c(5, 5), rgroup = c("Size variables (million (D/W) tons)",         "Specialization variables (percentage share)"))%
 \begin{tabular}{lrrrrrrrr}
 \toprule
 \multicolumn{1}{l}{\itshape }&\multicolumn{1}{r}{\itshape N}&\multicolumn{1}{r}{\itshape mean}&\multicolumn{1}{r}{\itshape sd}&\multicolumn{1}{r}{\itshape min}&\multicolumn{1}{r}{\itshape q25}&\multicolumn{1}{r}{\itshape q50}&\multicolumn{1}{r}{\itshape q75}&\multicolumn{1}{r}{\itshape max}\tabularnewline
 \midrule
-{\itshape Size variables (million D/W)}&&&&&&&&\tabularnewline
+{\itshape Size variables (million (D/W) tons)}&&&&&&&&\tabularnewline
 ~~total tonnage size&$118$&0.110&0.207&0.000&0.011&0.026&0.091&1.023\tabularnewline
 ~~total tonnage size of liner&$118$&0.031&0.112&0.000&0.000&0.000&0.000&0.721\tabularnewline
 ~~total tonnage size of special&$118$&0.015&0.033&0.000&0.000&0.000&0.008&0.177\tabularnewline
