fixed output format of Table 2

--- a/figuretable/total_tonnage_size_group_table.tex
+++ b/figuretable/total_tonnage_size_group_table.tex
@@ -1,42 +1,48 @@
-%latex.default(file = table_name, title = "", booktabs = TRUE,     object = data_english_for_reg_table, col.just = c("l", "r",         "r", "r"), center = "none", table.env = FALSE, rgroupTexCmd = "itshape",     n.rgroup = c(3, 3, 3, 3, 3, 3, 1, 1), rgroup = c("Nippon Yusen",         "Mitsui OSK Line", "Japan Line", "Kawasaki Kisen Kaisha",         "Yamashita Shinnihon Kisen", "Showa Line", "Unmatched",         "Total"))%
-\begin{tabular}{llrrr}
+%latex.default(file = table_name, title = "", booktabs = TRUE,     rowname = "", object = data_english_for_reg_table, col.just = c("l",         "r", "r"), center = "none", table.env = FALSE, rgroupTexCmd = "itshape",     n.rgroup = c(4, 4, 4, 4, 4, 4, 1, 1), rgroup = c("Nippon Yusen",         "Mitsui OSK Line", "Japan Line", "Kawasaki Kisen Kaisha",         "Yamashita Shinnihon Kisen", "Showa Line", "Unmatched",         "Total"))%
+\begin{tabular}{llrr}
 \toprule
-\multicolumn{1}{l}{}&\multicolumn{1}{c}{firm type}&\multicolumn{1}{c}{total tonnage}&\multicolumn{1}{c}{number of firms}&\multicolumn{1}{c}{total tonnage in a group}\tabularnewline
+\multicolumn{1}{l}{}&\multicolumn{1}{c}{Firm type}&\multicolumn{1}{c}{Total tonnage}&\multicolumn{1}{c}{Num of firms}\tabularnewline
 \midrule
-{\itshape Nippon Yusen}&&&&\tabularnewline
-~~1&(1) main&1509795&2&2577274\tabularnewline
-~~2&(2) affiliate&841568&7&\tabularnewline
-~~3&(3) wholly controlled&225911&7&\tabularnewline
+{\itshape Nippon Yusen}&&&\tabularnewline
+~~&(1) Main&1.51&2\tabularnewline
+~~&(2) Affiliate&0.84&7\tabularnewline
+~~&(3) Wholly controlled&0.23&7\tabularnewline
+~~&Total&2.58&16\tabularnewline
 \midrule
-{\itshape Mitsui OSK Line}&&&&\tabularnewline
-~~4&(1) main&1924859&2&2879216\tabularnewline
-~~5&(2) affiliate&400530&5&\tabularnewline
-~~6&(3) wholly controlled&553827&20&\tabularnewline
+{\itshape Mitsui OSK Line}&&&\tabularnewline
+~~&(1) Main&1.92&2\tabularnewline
+~~&(2) Affiliate&0.4&5\tabularnewline
+~~&(3) Wholly controlled&0.55&20\tabularnewline
+~~&Total&2.87&27\tabularnewline
 \midrule
-{\itshape Japan Line}&&&&\tabularnewline
-~~7&(1) main&1122694&2&1328069\tabularnewline
-~~8&(2) affiliate&125738&1&\tabularnewline
-~~9&(3) wholly controlled&79637&4&\tabularnewline
+{\itshape Japan Line}&&&\tabularnewline
+~~&(1) Main&1.12&2\tabularnewline
+~~&(2) Affiliate&0.13&1\tabularnewline
+~~&(3) Wholly controlled&0.08&4\tabularnewline
+~~&Total&1.33&7\tabularnewline
 \midrule
-{\itshape Kawasaki Kisen Kaisha}&&&&\tabularnewline
-~~10&(1) main&1658650&2&2338502\tabularnewline
-~~11&(2) affiliate&391170&9&\tabularnewline
-~~12&(3) wholly controlled&288682&7&\tabularnewline
+{\itshape Kawasaki Kisen Kaisha}&&&\tabularnewline
+~~&(1) Main&1.66&2\tabularnewline
+~~&(2) Affiliate&0.39&9\tabularnewline
+~~&(3) Wholly controlled&0.29&7\tabularnewline
+~~&Total&2.34&18\tabularnewline
 \midrule
-{\itshape Yamashita Shinnihon Kisen}&&&&\tabularnewline
-~~13&(1) main&899033&2&1671590\tabularnewline
-~~14&(2) affiliate&601616&5&\tabularnewline
-~~15&(3) wholly controlled&170941&10&\tabularnewline
+{\itshape Yamashita Shinnihon Kisen}&&&\tabularnewline
+~~&(1) Main&0.9&2\tabularnewline
+~~&(2) Affiliate&0.6&5\tabularnewline
+~~&(3) Wholly controlled&0.17&10\tabularnewline
+~~&Total&1.67&17\tabularnewline
 \midrule
-{\itshape Showa Line}&&&&\tabularnewline
-~~16&(1) main&549095&2&1041063\tabularnewline
-~~17&(2) affiliate&464830&3&\tabularnewline
-~~18&(3) wholly controlled&27138&4&\tabularnewline
+{\itshape Showa Line}&&&\tabularnewline
+~~&(1) Main&0.55&2\tabularnewline
+~~&(2) Affiliate&0.46&3\tabularnewline
+~~&(3) Wholly controlled&0.03&4\tabularnewline
+~~&Total&1.04&9\tabularnewline
 \midrule
-{\itshape Unmatched}&&&&\tabularnewline
-~~19&unmatched&1131211&24&1131211\tabularnewline
+{\itshape Unmatched}&&&\tabularnewline
+~~&Unmatched&1.13&24\tabularnewline
 \midrule
-{\itshape Total}&&&&\tabularnewline
-~~20&&12966925&118&12966925\tabularnewline
+{\itshape Total}&&&\tabularnewline
+~~&&12.96&118\tabularnewline
 \bottomrule
 \end{tabular}
