--- a/figuretable/shipping_market_stats_table.tex
+++ b/figuretable/shipping_market_stats_table.tex
@@ -1,4 +1,4 @@
-%latex.default(file = table_name, title = "", booktabs = TRUE,     object = temp, col.just = rep("r", dim(temp)[2]), center = "none",     table.env = FALSE, cgroupTexCmd = "itshape", colnamesTexCmd = "itshape",     collabel.just = rep("r", dim(temp)[2]), rgroupTexCmd = "itshape",     n.rgroup = c(5, 5), rgroup = c("Size variables (million (D/W) tons)",         "Specialization variables (percentage share)"))%
+%latex.default(file = table_name, title = "", booktabs = TRUE,     object = temp, col.just = rep("r", dim(temp)[2]), center = "none",     table.env = FALSE, cgroupTexCmd = "itshape", colnamesTexCmd = "itshape",     collabel.just = rep("r", dim(temp)[2]), rgroupTexCmd = "itshape",     n.rgroup = c(5, 5), rgroup = c("Size variables (million (D/W) tons)",         "Specialization variables (\\% share)"))%
 \begin{tabular}{lrrrrrrrr}
 \toprule
 \multicolumn{1}{l}{\itshape }&\multicolumn{1}{r}{\itshape N}&\multicolumn{1}{r}{\itshape mean}&\multicolumn{1}{r}{\itshape sd}&\multicolumn{1}{r}{\itshape min}&\multicolumn{1}{r}{\itshape q25}&\multicolumn{1}{r}{\itshape q50}&\multicolumn{1}{r}{\itshape q75}&\multicolumn{1}{r}{\itshape max}\tabularnewline
@@ -10,7 +10,7 @@
 ~~total tonnage size of tanker&$118$&0.030&0.071&0.000&0.000&0.000&0.024&0.417\tabularnewline
 ~~total tonnage size of tramper&$118$&0.035&0.055&0.000&0.002&0.013&0.034&0.246\tabularnewline
 \midrule
-{\itshape Specialization variables (percentage share)}&&&&&&&&\tabularnewline
+{\itshape Specialization variables (\% share)}&&&&&&&&\tabularnewline
 ~~share of liner&$118$&0.104&0.235&0.000&0.000&0.000&0.000&1.000\tabularnewline
 ~~share of special&$118$&0.117&0.244&0.000&0.000&0.000&0.088&1.000\tabularnewline
 ~~share of tanker&$118$&0.192&0.351&0.000&0.000&0.000&0.208&1.000\tabularnewline
